--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/db/Threads_%28app%29.png/600px-Threads_%28app%29.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Threads Clone</title>
+  <title>Threads by James</title>
 </head>
 
 <body>
